--- a/instances/ibm-sfg-b2bi-prod/values.yaml
+++ b/instances/ibm-sfg-b2bi-prod/values.yaml
@@ -470,6 +470,7 @@ asi:
     annotations: {}  
   
   backendService:
+    #type: NodePort
     type: LoadBalancer
     # Supported values are "ClientIP" & "None". Default is "None".
     sessionAffinity: None
