--- a/instances/ibm-sfg-db2/values.yaml
+++ b/instances/ibm-sfg-db2/values.yaml
@@ -2,7 +2,7 @@ global: {}
 service-account:
   name: db2
   create: false
-  # sccs: ["privileged"]
+  sccs: ["privileged"]
 
 ibm-sfg-db2:
   name: db2
@@ -19,12 +19,12 @@ ibm-sfg-db2:
     type: LoadBalancer
     port: 50000
 
-  securityContext:
-    privileged: false
-    allowPrivilegeEscalation: false
-    runAsNonRoot: true
-    capabilities:
-      drop:
-      - ALL
-    seccompProfile:
-      type: "RuntimeDefault"
+  # securityContext:
+  #   privileged: false
+  #   allowPrivilegeEscalation: false
+  #   runAsNonRoot: true
+  #   capabilities:
+  #     drop:
+  #     - ALL
+  #   seccompProfile:
+  #     type: "RuntimeDefault"
