--- a/instances/lightwell-framework-instance/configmap/application.properties
+++ b/instances/lightwell-framework-instance/configmap/application.properties
@@ -207,8 +207,8 @@ spring.mail.port=587
 #
 # b2b.archive.older.than.days should match ArchiveOlderThanDays in customer_LW.properties
 # ----------------------
-b2b.url=http://asi-b2bi-prod.itzroks-664003h6xc-uqjsu5-4b4a324f027aea19c5cbc0c3275c4656-0000.us-south.containers.appdomain.cloud
-b2b.soap_url=http://asi-b2bi-prod.itzroks-664003h6xc-uqjsu5-4b4a324f027aea19c5cbc0c3275c4656-0000.us-south.containers.appdomain.cloud/portal_soap
+b2b.url=http://asi-b2bi-prod.apps.667c59b0808b98001eb0355c.cloud.techzone.ibm.com
+b2b.soap_url=http://asi-b2bi-prod.apps.667c59b0808b98001eb0355c.cloud.techzone.ibm.com/portal_soap
 b2b.soap_user=fg_sysadmin
 b2b.soap_password=password@
 b2b.soap_timeout=15000
@@ -248,7 +248,7 @@ b2b.bp_details_url_prefix=dashboard
 #
 # timeout is in milliseconds
 # ----------------------
-b2b.api.url=http://api-b2bi-prod.itzroks-664003h6xc-uqjsu5-4b4a324f027aea19c5cbc0c3275c4656-0000.us-south.containers.appdomain.cloud/B2BAPIs/svc
+b2b.api.url=http://api-b2bi-prod.apps.667c59b0808b98001eb0355c.cloud.techzone.ibm.com/B2BAPIs/svc
 b2b.api.user=fg_sysadmin
 b2b.api.password=password@
 b2b.api.timeout=20000
@@ -263,10 +263,11 @@ b2b.api.timeout=20000
 #
 # timeout is in milliseconds
 # ----------------------
-spe.api.url=http://itxa.itzroks-664003h6xc-uqjsu5-4b4a324f027aea19c5cbc0c3275c4656-0000.us-south.containers.appdomain.cloud/spe/svc
-spe.api.user=admin
-spe.api.password=password
-spe.api.timeout=20000
+
+# spe.api.url=http://itxa.itzroks-664003h6xc-uqjsu5-4b4a324f027aea19c5cbc0c3275c4656-0000.us-south.containers.appdomain.cloud/spe/svc
+# spe.api.user=admin
+# spe.api.password=password
+# spe.api.timeout=20000
 # spe.api.protocol=TLSv1.2
 # spe.api.validateHostname=true
 
@@ -364,28 +365,28 @@ spe.api.timeout=20000
 # mtf.datasource.config.minimum-idle=1
 # mtf.datasource.config.validation-timeout=1000
 
-fw.datasource.url=jdbc:db2://172.21.230.254:50000/FW:progressiveStreaming=2;
+fw.datasource.url=jdbc:db2://172.30.175.191:50000/FW:progressiveStreaming=2;
 fw.datasource.username=db2inst1
 fw.datasource.password=db2inst1
 fw.datasource.config.maximum-pool-size=10
 fw.datasource.config.minimum-idle=1
 fw.datasource.config.validation-timeout=1000
 
-mgmt.datasource.url=jdbc:db2://172.21.230.254:50000/FW
+mgmt.datasource.url=jdbc:db2://172.30.175.191:50000/FW
 mgmt.datasource.username=db2inst1
 mgmt.datasource.password=db2inst1
 mgmt.datasource.config.maximum-pool-size=10
 mgmt.datasource.config.minimum-idle=1
 mgmt.datasource.config.validation-timeout=1000
 
-mtf.datasource.url=jdbc:db2://172.21.230.254:50000/FW
+mtf.datasource.url=jdbc:db2://172.30.175.191:50000/FW
 mtf.datasource.username=db2inst1
 mtf.datasource.password=db2inst1
 mtf.datasource.config.maximum-pool-size=10
 mtf.datasource.config.minimum-idle=1
 mtf.datasource.config.validation-timeout=1000
 
-b2bi.datasource.url=jdbc:db2://172.21.24.222:50000/B2BIDB
+b2bi.datasource.url=jdbc:db2://172.30.19.28:50000/B2BIDB
 b2bi.datasource.username=db2inst1
 b2bi.datasource.password=db2inst1
 b2bi.datasource.config.maximum-pool-size=10
@@ -393,9 +394,9 @@ b2bi.datasource.config.minimum-idle=1
 b2bi.datasource.config.validation-timeout=1000
 
 # Below is used for ITX environments with SPE
-spe.datasource.url=jdbc:db2://172.21.24.222:50000/B2BIDB
-spe.datasource.username=db2inst1
-spe.datasource.password=db2inst1
-spe.datasource.config.maximum-pool-size=10
-spe.datasource.config.minimum-idle=1
-spe.datasource.config.validation-timeout=1000
+# spe.datasource.url=jdbc:db2://172.30.19.28:50000/B2BIDB
+# spe.datasource.username=db2inst1
+# spe.datasource.password=db2inst1
+# spe.datasource.config.maximum-pool-size=10
+# spe.datasource.config.minimum-idle=1
+# spe.datasource.config.validation-timeout=1000
